--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -17,7 +17,10 @@
             "problemMatcher": [
                 "$gcc"
             ],
-            "group": "build",
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            },
             "detail": "Задача создана отладчиком."
         }
     ],
