--- a/Telegram server/Telegram server.csproj
+++ b/Telegram server/Telegram server.csproj
@@ -19,4 +19,8 @@
     <PackageReference Include="Telegram.Bot.Extensions" Version="1.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="assets\" />
+  </ItemGroup>
+
 </Project>
