not bias network

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ WithLearning/Training.exe
 NetworkDescription/CorrectNetworkSize.exe
 .vscode/tasks.json
 .vscode/settings.json
+Library/NeuronNetwork.exe
+WithOutLearning/ProcessTest.exe
